--- a/build_week_2_(working).ipynb
+++ b/build_week_2_(working).ipynb
@@ -6,7 +6,7 @@
       "name": "build_week_2 (working).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOdUH62E1tCH3KrU94Gm8J8",
+      "authorship_tag": "ABX9TyOo9A+hzEHPQ5StqugpoVFp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,11 +107,7 @@
       "metadata": {
         "id": "0DMwTGiOAQR6",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 33
-        },
-        "outputId": "74f20770-25e7-4d43-8e60-a9ed84414503"
+        "colab": {}
       },
       "source": [
         "# imports\n",
@@ -153,13 +149,13 @@
         "df['car'] = df['car'].str[5:]\n",
         "\n",
         "# # get make of car feature\n",
-        "df['Make'] = df['car'].str.split().str.get(0)\n",
+        "df['make'] = df['car'].str.split().str.get(0)\n",
         "\n",
         "# remove make of car from 'car' feature\n",
         "df['car'] = df['car'].str.split(n=1).str[1]\n",
         "\n",
         "# remove mini from \"cooper\" from 'Car' for consistancey\n",
-        "df['Make'] = df['Make'].replace('MINI','MINI Cooper')\n",
+        "df['make'] = df['make'].replace('MINI','MINI Cooper')\n",
         "\n",
         "# remove \"cooper\" from 'car' feature and add to 'Make' feature, for consistancy\n",
         "df['car'] = df['car'].mask(df['car'].str.contains('Cooper'),df['car'].str.replace('Cooper',''))\n",
@@ -257,15 +253,13 @@
         "df.loc[df['int_color'].str.contains('Ebony'), 'int_color'] = 'Brown'\n",
         "df.loc[df['int_color'].str.contains('Ash'), 'int_color'] = 'Gray'\n",
         "\n",
-        "# get list of colors i want\n",
+        "# get list of int colors i want\n",
         "int_color =  df['int_color'].value_counts().head(5).index.to_list()\n",
-        "\n",
         "# chance all colors no known to 'other' (from list)\n",
-        "df.loc[~df['int_color'].isin(car_color), 'int_color'] = 'Other'\n",
+        "df.loc[~df['int_color'].isin(int_color), 'int_color'] = 'Other'\n",
         "\n",
         "# get list of colors i want\n",
         "car_color =  df['ext_color'].value_counts().head(10).index.to_list()\n",
-        "\n",
         "# chance all colors no known to 'other' (from list)\n",
         "df.loc[~df['ext_color'].isin(car_color), 'ext_color'] = 'Other'\n",
         "\n",
@@ -282,21 +276,8 @@
         "# shape\n",
         "df.shape"
       ],
-      "execution_count": 519,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(2307, 16)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 519
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -309,7 +290,7 @@
         "## make csv for git up \n",
         "# df.to_csv('clean_data_set_2_v2', index=False)"
       ],
-      "execution_count": 525,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -337,7 +318,7 @@
         "# quick plot price vs mileage\n",
         "sns.jointplot(x=\"price\", y=\"mileage\", data=df, kind='reg',joint_kws={'line_kws':{'color':'red'}});"
       ],
-      "execution_count": 416,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -389,7 +370,7 @@
         "                               \n",
         "print(f'Baseline error of {baseline:.2f} if mean was used')"
       ],
-      "execution_count": 437,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,7 +429,7 @@
         "y_pred = lasso.predict(X_val_encoded)\n",
         "mean_absolute_error(y_val, y_pred)"
       ],
-      "execution_count": 523,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -481,7 +462,7 @@
         "print('Feature matrix shape:', X_train.shape, X_val.shape, X_test.shape)\n",
         "print('Target vector shape:', y_train.shape, y_val.shape, y_test.shape)"
       ],
-      "execution_count": 275,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,7 +506,7 @@
         "\n",
         "X_val_encoded = encoder.transform(X_val)"
       ],
-      "execution_count": 451,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -561,7 +542,7 @@
         "y_pred = lasso.predict(X_val_encoded)\n",
         "mean_absolute_error(y_val, y_pred)"
       ],
-      "execution_count": 455,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,7 +578,7 @@
         "y_pred = lasso.predict(X_val_encoded)\n",
         "mean_absolute_error(y_val, y_pred)"
       ],
-      "execution_count": 453,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -633,7 +614,7 @@
         "y_pred = lasso.predict(X_val_encoded)\n",
         "mean_absolute_error(y_val, y_pred)"
       ],
-      "execution_count": 281,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -669,7 +650,7 @@
         "y_pred = lasso.predict(X_val_encoded)\n",
         "mean_absolute_error(y_val, y_pred)"
       ],
-      "execution_count": 280,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -702,7 +683,7 @@
         "# simple ML prediction\n",
         "pipeline.fit(X_train, y_train);"
       ],
-      "execution_count": 282,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -722,7 +703,7 @@
         "\n",
         "mean_absolute_error(y_val, y_pred)"
       ],
-      "execution_count": 283,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
