--- a/build_week_2_(working).ipynb
+++ b/build_week_2_(working).ipynb
@@ -6,7 +6,7 @@
       "name": "build_week_2 (working).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyODYqV7Y5mtN+ehUTcnehaE",
+      "authorship_tag": "ABX9TyO0ogiSnOCQdeWGhCxVZ4iP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## cleaning a formatting data set 1"
+        "## cleaning a formatting test data set "
       ]
     },
     {
@@ -99,7 +99,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Cleaning and formatting data set 2"
+        "## Cleaning and formatting working data set "
       ]
     },
     {
@@ -403,7 +403,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## EDA data set 2"
+        "## EDA working data set "
       ]
     },
     {
@@ -445,7 +445,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## model selection data set 2"
+        "## model selection working data set "
       ]
     },
     {
@@ -479,6 +479,43 @@
           "output_type": "stream",
           "text": [
             "Baseline error of 1396.30 if mean was used\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FWMMsRmeIEp1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "64ebc1d9-2b3e-40e6-cad7-cd7900fa9739"
+      },
+      "source": [
+        "# simple pipeline\n",
+        "pipeline = make_pipeline(\n",
+        "    ce.OneHotEncoder(use_cat_names=True),\n",
+        "    RandomForestRegressor(max_depth=25),\n",
+        ")\n",
+        "\n",
+        "# simple prediction\n",
+        "pipeline.fit(X_train, y_train);\n",
+        "y_pred = pipeline.predict(X_val)\n",
+        "y_pred2 = pipeline.predict(X_train)\n",
+        "print(mean_absolute_error(y_val, y_pred))\n",
+        "print(mean_absolute_error(y_train, y_pred2))"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1046.2031022615536\n",
+            "379.89244899213367\n"
           ],
           "name": "stdout"
         }
@@ -547,11 +584,7 @@
       "metadata": {
         "id": "T-kAwgiRTi69",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 605
-        },
-        "outputId": "c52a96e7-8fff-442f-dae3-99307a6945bb"
+        "colab": {}
       },
       "source": [
         "# implementing random search with a randomforestregression model\n",
@@ -597,7 +630,7 @@
         "search = RandomizedSearchCV(\n",
         "    pipeline,\n",
         "    param_distributions=p_distributions,\n",
-        "    n_iter = 50,\n",
+        "    n_iter = 100,\n",
         "    cv=10,\n",
         "    scoring='neg_mean_absolute_error',\n",
         "    verbose=10,\n",
@@ -613,66 +646,32 @@
         "y_pred = pipeline.predict(X_val)\n",
         "\n",
         "# check val score and the model used\n",
-        "print(search.best_params_)\n",
-        "print(-search.best_score_)\n",
-        "print(mean_absolute_error(y_val, y_pred))"
+        "print('\\n',search.best_params_)\n",
+        "print('\\n',-search.best_score_)\n",
+        "print('\\n',mean_absolute_error(y_val, y_pred))"
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Splits shape: (1356, 11) (339, 11) (424, 11)\n",
-            "Feature matrix shape: (1356, 10) (339, 10) (424, 10)\n",
-            "Target vector shape: (1356,) (339,) (424,)\n",
-            "Fitting 10 folds for each of 50 candidates, totalling 500 fits\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-            "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    3.7s\n",
-            "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    5.0s\n",
-            "[Parallel(n_jobs=-1)]: Done  16 tasks      | elapsed:    5.2s\n",
-            "[Parallel(n_jobs=-1)]: Done  25 tasks      | elapsed:    7.9s\n",
-            "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:   10.4s\n",
-            "[Parallel(n_jobs=-1)]: Done  45 tasks      | elapsed:   14.4s\n",
-            "[Parallel(n_jobs=-1)]: Done  56 tasks      | elapsed:   18.2s\n",
-            "[Parallel(n_jobs=-1)]: Done  69 tasks      | elapsed:   21.6s\n",
-            "[Parallel(n_jobs=-1)]: Done  82 tasks      | elapsed:   25.9s\n",
-            "[Parallel(n_jobs=-1)]: Done  97 tasks      | elapsed:   29.0s\n",
-            "[Parallel(n_jobs=-1)]: Done 112 tasks      | elapsed:   32.9s\n",
-            "[Parallel(n_jobs=-1)]: Done 129 tasks      | elapsed:   36.9s\n",
-            "[Parallel(n_jobs=-1)]: Done 146 tasks      | elapsed:   41.8s\n",
-            "[Parallel(n_jobs=-1)]: Done 165 tasks      | elapsed:   46.8s\n",
-            "[Parallel(n_jobs=-1)]: Done 184 tasks      | elapsed:   50.0s\n",
-            "[Parallel(n_jobs=-1)]: Done 205 tasks      | elapsed:   54.1s\n",
-            "[Parallel(n_jobs=-1)]: Done 226 tasks      | elapsed:   58.8s\n",
-            "[Parallel(n_jobs=-1)]: Done 249 tasks      | elapsed:  1.1min\n",
-            "[Parallel(n_jobs=-1)]: Done 272 tasks      | elapsed:  1.2min\n",
-            "[Parallel(n_jobs=-1)]: Done 297 tasks      | elapsed:  1.2min\n",
-            "[Parallel(n_jobs=-1)]: Done 322 tasks      | elapsed:  1.3min\n",
-            "[Parallel(n_jobs=-1)]: Done 349 tasks      | elapsed:  1.4min\n",
-            "[Parallel(n_jobs=-1)]: Done 376 tasks      | elapsed:  1.5min\n",
-            "[Parallel(n_jobs=-1)]: Done 405 tasks      | elapsed:  1.6min\n",
-            "[Parallel(n_jobs=-1)]: Done 434 tasks      | elapsed:  1.7min\n",
-            "[Parallel(n_jobs=-1)]: Done 465 tasks      | elapsed:  1.8min\n",
-            "[Parallel(n_jobs=-1)]: Done 500 out of 500 | elapsed:  2.0min finished\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "{'randomforestregressor__n_estimators': 373, 'randomforestregressor__min_samples_split': 2, 'randomforestregressor__min_samples_leaf': 1, 'randomforestregressor__max_depth': 44}\n",
-            "1025.47025066148\n",
-            "1032.0841854690107\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sPrIZJ9_0wne",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# best param:  {'randomforestregressor__n_estimators': 240,\n",
+        "                # 'randomforestregressor__min_samples_split': 2,\n",
+        "                # 'randomforestregressor__min_samples_leaf': 1,\n",
+        "                # 'randomforestregressor__max_depth': 48}\n",
+        "\n",
+        "# best score: 1025.6300169072258\n",
+        "\n",
+        "# val error: 1031.535029498525"
+      ],
+      "execution_count": 22,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -683,70 +682,32 @@
           "base_uri": "https://localhost:8080/",
           "height": 84
         },
-        "outputId": "4449accf-7c68-488b-dbf6-8c8001ff1b25"
+        "outputId": "f453c0b3-a9ee-4ce6-eca9-5573e3c014f7"
       },
       "source": [
         "search.best_params_\n",
         "\n",
-        "# {'randomforestregressor__n_estimators': 321,\n",
-        "#  'randomforestregressor__min_samples_split': 14,\n",
+        "# {'randomforestregressor__n_estimators': 240,\n",
+        "#  'randomforestregressor__min_samples_split': 2,\n",
         "#  'randomforestregressor__min_samples_leaf': 1,\n",
-        "#  'randomforestregressor__max_depth': 22}\n",
-        "# 1025.8075380913047"
+        "#  'randomforestregressor__max_depth': 48}"
       ],
-      "execution_count": 14,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'randomforestregressor__n_estimators': 373,\n",
+              "{'randomforestregressor__n_estimators': 240,\n",
               " 'randomforestregressor__min_samples_split': 2,\n",
               " 'randomforestregressor__min_samples_leaf': 1,\n",
-              " 'randomforestregressor__max_depth': 44}"
+              " 'randomforestregressor__max_depth': 48}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "FWMMsRmeIEp1",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 50
-        },
-        "outputId": "64ebc1d9-2b3e-40e6-cad7-cd7900fa9739"
-      },
-      "source": [
-        "# simple pipeline\n",
-        "pipeline = make_pipeline(\n",
-        "    ce.OneHotEncoder(use_cat_names=True),\n",
-        "    RandomForestRegressor(max_depth=25),\n",
-        ")\n",
-        "\n",
-        "# simple ML prediction\n",
-        "pipeline.fit(X_train, y_train);\n",
-        "y_pred = pipeline.predict(X_val)\n",
-        "y_pred2 = pipeline.predict(X_train)\n",
-        "print(mean_absolute_error(y_val, y_pred))\n",
-        "print(mean_absolute_error(y_train, y_pred2))"
-      ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1046.2031022615536\n",
-            "379.89244899213367\n"
-          ],
-          "name": "stdout"
+          "execution_count": 25
         }
       ]
     },
